// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioOrSelect field should render select when titleMap has less than 2 options 1`] = `
<Radios
  errorMessage="My Error Message"
  id="myRadioOrSelect"
  isValid={true}
  onChange={[MockFunction]}
  onFinish={[MockFunction]}
  schema={
    {
      "description": "Select me",
      "placeholder": "Please select a value",
      "schema": {
        "enum": [
          "foo",
          "bar",
          "lol",
        ],
        "type": "string",
      },
      "title": "My Select title",
      "titleMap": [
        {
          "name": "My foo title",
          "value": "foo",
        },
        {
          "name": "My bar title",
          "value": "bar",
        },
      ],
    }
  }
  value="foo"
/>
`;

exports[`RadioOrSelect field should render select when titleMap has more than 2 options 1`] = `
<Select
  errorMessage="My Error Message"
  id="myRadioOrSelect"
  isValid={true}
  onChange={[MockFunction]}
  onFinish={[MockFunction]}
  schema={
    {
      "description": "Select me",
      "placeholder": "Please select a value",
      "schema": {
        "enum": [
          "foo",
          "bar",
          "lol",
        ],
        "type": "string",
      },
      "title": "My Select title",
      "titleMap": [
        {
          "name": "My foo title",
          "value": "foo",
        },
        {
          "name": "My bar title",
          "value": "bar",
        },
        {
          "name": "My lol title",
          "value": "lol",
        },
      ],
    }
  }
  value="lol"
/>
`;
